# cvsgui

./: .cvsignore  .gitignore  ChangeLog  GCVS-VERSION  GCvs.prj  INSTALL  Makefile.am  NEWS  PORTING  README  README.SUN  README.md  TODO  autogen.sh  configure.in  gcvs.desktop.in.in  gcvs.spec  gcvs.spec.in  mkinstalldirs  xml-i18n-update.in
InnoSetup/: Info.txt  WinCvs.iss  cvsnt_setup_options.ini
InnoSetup/vcredist/: Readme.txt
MacCvs/: BUGS  README  README.BalloonHelp  README.Kerberos  README.LSH_MACSSH  README.Mozilla  RELEASE.MPW
MacCvs/Distrib/: MkDistr.py  MkDistr.rsrc  bin.exclude  bin.include  binx.include  src.exclude  src.include
MacCvs/GUSI20/: GUSIConfig.mk  GUSI_Install.MPW  MANIFEST  MacDistr  Makefile.mk  README  STLport_Install.MPW
MacCvs/GUSI_MSL/: .cvsignore  GUSIMSLSetup.cpp  GUSIMSLSetup.h  GUSIMacSSHPatch.cpp
MacCvs/Goodies/: AEStatusQuery.asc  AEVersion.asc  BBEdit Diff  (+1 more)
Macros/: AddDelIgnore.py  AddRootModule.py  Bonsai.py  BrowseRepoTk.py  ChangeRepo.py  ChangeRoot.py  ChangeRoot.tcl  ChangeRootTK.tcl  ChangeSubstModeTk.py  Cleanup.py  CleanupMissing.py  CmdHere.py  ColorTest.tcl  ConflictScanner.py  CopyToBranch.py  CopyToHeadVersion.py  CvsAddAll.tcl  CvsAlertTest.py  CvsPromptTest.py  CvsVersion.py  CvsView.py  DocMacros.txt  EditFileTypeAssoc.py  EditSafely.tcl  ExtDiffFiles.py  ExtendedAddTk.py  FastSearch.py  FixDST.py  ForceUpdate.tcl  HideAdminFiles.py  ListModules.py  ListNonCVS.tcl  ListTags.py  Makefile.am  MoveBranchPointToHead.py  Override2ndPartyAdd.py  PrepPatch.tcl  RListModule.py  RecursiveAddTk.py  ResurrectFile.py  (+15 more)
PythonLib/: Makefile.am
PythonLib/cvsgui/: App.py  CmdUI.py  ColorConsole.py  Cvs.py  CvsEntry.py  CvsLog.py  Macro.py  MacroRegistry.py  MacroUtils.py  Makefile.am  MenuMgr.py  Persistent.py  SafeTk.py  Shell.py  SubstModeTk.py  __init__.py
SourceDoc/: .cvsignore  DoDoxygen.bat  DoDoxygen.sh  Doxyfile  Readme.txt
WinCvs/: .cvsignore  BrowseFileView.cpp  BrowseFileView.h  BrowserBar.cpp  BrowserBar.h  ColorStatic.cpp  ColorStatic.h  ConsoleBar.cpp  ConsoleBar.h  CustomizeMenus.cpp  CustomizeMenus.h  CvsStatusBar.cpp  CvsStatusBar.h  CvsrootEntryDlg.cpp  CvsrootEntryDlg.h  ExploreBar.cpp  ExploreBar.h  FileViewWatcher.cpp  FileViewWatcher.h  GraphDoc.cpp  GraphDoc.h  GraphFrm.cpp  GraphFrm.h  GraphView.cpp  GraphView.h  HHelpSupport.cpp  HHelpSupport.h  HistComboBoxEx.cpp  HistComboBoxEx.h  HtmlStatic.cpp  HtmlStatic.h  INSTALL.txt  LogFrm.cpp  LogFrm.h  MMenuString.cpp  MMenuString.h  MainFrm.cpp  MainFrm.h  MakeHHelp.bat  MfFileDialog.cpp  (+38 more)
am_macros/: Makefile.am  autogen.sh  gcvs-python.m4
common/: .cvsignore  AboutDlg.cpp  AboutDlg.h  AdminOptionDlg.cpp  AdminOptionDlg.h  AnnotateDlg.cpp  AnnotateDlg.h  AppConsole.cpp  AppConsole.h  AppGlue.cpp  AppGlue.h  AppGlue.mac.cpp  AppGlue.mac.h  AskYesNo.cpp  AskYesNo.h  Authen.cpp  Authen.h  BrowseViewColumn.cpp  BrowseViewColumn.h  BrowseViewHandlers.cpp  BrowseViewHandlers.h  BrowseViewModel.cpp  BrowseViewModel.h  CTCP2Parse.cpp  CTCP2Parse.hpp  CheckoutDlg.cpp  CheckoutDlg.h  CommitDlg.cpp  CommitDlg.h  CvsAlert.cpp  CvsAlert.h  CvsArgs.cpp  CvsArgs.h  CvsCommands.cpp  CvsCommands.h  CvsEntries.cpp  CvsEntries.h  CvsIgnore.cpp  CvsIgnore.h  CvsPrefs.cpp  (+144 more)
cvs-1.10/: config.h.in  configure  configure.in  cvsnt.dsw
cvsgui_protocol/: Makefile.am  cvsgui.c  cvsgui.h  cvsgui_process.cpp  cvsgui_process.h  cvsgui_wire.cpp  cvsgui_wire.h  readme.txt
cvstree/: .cvsignore  CLogNode_Walker_For_InsertBranchName.cc  CLogNode_Walker_For_InsertBranchName.h  CLogNode_Walker_Std.cc  CLogNode_Walker_Std.h  CvsLog.cpp  CvsLog.h  Makefile.am  README  common.h  cvstree.dsp  lexer.cc  lexer.cpp  lexer.ll  main.cpp  parser.cc  parser.cpp  parser.h  parser.yy
gcvs/: Makefile.am  gcvs.glade  stdafx.h
gcvs/src/: .cvsignore  Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  main.cpp  support.c
pixmaps/: Makefile.am  about.xpm  add.xpm  addb.xpm  addfile.xpm  binfile.xpm  branch.xpm  delfile.xpm  diff.xpm  edit.xpm  error.xpm  explore.xpm  flat.xpm  folder.xpm  foldign.xpm  foldmiss.xpm  foldunk.xpm  gcvs-32x32.xpm  graph.xpm  hideUnknown.xpm  ignore.xpm  info.xpm  lock.xpm  log.xpm  modfile.xpm  question.xpm  release.xpm  reload.xpm  remove.xpm  res_edit.xpm  status.xpm  stop.xpm  stopAlert.xpm  tag.xpm  trash.xpm  unedit.xpm  unlock.xpm  untag.xpm  unwatch.xpm  update.xpm  (+11 more)
po/: .cvsignore  POTFILES.in  de.po  en_GB.po  messages.mo
qcvs/: .cvsignore  Makefile.am  QCheckoutTab.cpp  QCheckoutTab.h  QCheckoutTabData.cpp  QCheckoutTabData.h  QCheckout_MAIN.cpp  QCheckout_MAIN.dlg  QCheckout_MAIN.h  QCheckout_MAINData.cpp  QCheckout_MAINData.h  QCheckout_STICKY.cpp  QCheckout_STICKY.dlg  QCheckout_STICKY.h  QCheckout_STICKYData.cpp  QCheckout_STICKYData.h  QCommitTab.cpp  QCommitTab.h  QCommitTabData.cpp  QCommitTabData.h  QCommit_MAIN.cpp  QCommit_MAIN.dlg  QCommit_MAIN.h  QCommit_MAINData.cpp  QCommit_MAINData.h  QCvsAlert.cpp  QCvsAlert.dlg  QCvsAlert.h  QCvsAlertData.cpp  QCvsAlertData.h  QGetPassword.cpp  QGetPassword.dlg  QGetPassword.h  QGetPasswordData.cpp  QGetPasswordData.h  QGetPrefsTab.cpp  QGetPrefsTab.h  QGetPrefsTabData.cpp  QGetPrefsTabData.h  QGetPrefsTag.dlg  (+136 more)
rf/: .cvsignore  Makefile.am  uconfig.h  uconsole.cpp  uconsole.h  udraw.cpp  udraw.h  uevent.cpp  umain.h  umenu.cpp  umenu.h  uobject.cpp  uobject.h  ustr.cpp  ustr.h  utoolbar.cpp  utoolbar.h  uwidget.cpp  uwidget.h
rf/support/: Makefile.am
rf/support/gtk/: Makefile.am  stdafx.h
rf/support/macapp/: .cvsignore  Pseudo.mcp  PseudoRel.pch  TBuggyPopup  TPseudoDoubleNumberText  TPseudoIconButton  TPseudoIconCheckBox  TPseudoIconPopup  TPseudoRotateIconButton  UPseudoSupport.cpp  UPseudoSupport.h  stdafx.h
rf/support/mfc/: .cvsignore  PseudoButton.cpp  PseudoButton.h  PseudoDlg.cpp  PseudoDlg.h  PseudoDraw.cpp  PseudoDraw.h  PseudoList.cpp  Readme.txt  StdAfx.cpp  StdAfx.h  dib.c  dib.h  pseudo.dsp  pseudo.dsw  pseudolist.h
rf/support/powerplant/: .cvsignore  Pseudo.mcp  PseudoDbg.pch  PseudoDbgCarb.pch  PseudoRelCarb.pch  UPseudoSupport.cpp  UPseudoSupport.h  stdafx.h
(+677 files in other folders)
