EXTRA_DIST = DocMacros.txt \
	ChangeRoot.tcl \
	ChangeRootTK.tcl \
	Cleanup.tcl \
	ColorTest.tcl \
	CvsAddAll.tcl \
	EditSafely.tcl \
	FastModSearch.tcl \
	FolderTest.tcl \
	ForceUpdate.tcl \
	ListDeleted.tcl \
	ListLockedFiles.tcl \
	ListModules.tcl \
	ListNonCVS.tcl \
	ListStickyTags.tcl \
	PrepPatch.tcl \
	QueryState.tcl \
	RevertChanges.tcl \
	SelectionTest.tcl \
	SetCurrentVersion.tcl \
	TclVersion.tcl \
	cvs2cl.tcl \
	cvsignore_add.tcl \
	cvsignore_remove.tcl \
	startup.tcl \
	AddDelIgnore.py \
	AddRootModule.py \
	Bonsai.py \
	ChangeRoot.py \
	CopyToHeadVersion.py \
	CvsVersion.py \
	CvsView.py \
	FastSearch.py \
	FixDST.py \
	HideAdminFiles.py \
	ListModules.py \
	ListTags.py \
	RListModule.py \
	RecursiveAddTk.py \
	ResurrectFile.py \
	ShowLogEntry.py \
	ZipSelected.py \
	cvs2cl.py \
	test.py

pkgdata_DATA = $(EXTRA_DIST)
