## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

gcvs_src_gcvs_pixmapsdir = $(prefix)/@NO_PREFIX_PACKAGE_PIXMAPS_DIR@

gcvs_src_gcvs_pixmaps_DATA = \
	addb.xpm\
	add.xpm\
	addfile.xpm\
	binfile.xpm\
	branch.xpm\
	commit.xpm\
	conflict.xpm\
	cvsfile.xpm\
	delfile.xpm\
	diff.xpm\
	edit.xpm\
	error.xpm\
	explore.xpm\
	folder.xpm\
	foldign.xpm\
	foldmiss.xpm\
	foldunk.xpm\
	graph.xpm\
	ignfile.xpm\
	ignore.xpm\
	lock.xpm\
	log.xpm\
	missfile.xpm\
	modbin.xpm\
	modfile.xpm\
	release.xpm\
	reload.xpm\
	remove.xpm\
	status.xpm\
	stop.xpm\
	tag.xpm\
	trash.xpm\
	unedit.xpm\
	unkfile.xpm\
	unlock.xpm\
	untag.xpm\
	unwatch.xpm\
	update.xpm\
	upfolder.xpm\
	warning.xpm\
	watch.xpm\
	viewAdded.xpm\
	viewChanged.xpm\
	viewConflict.xpm\
	viewMissing.xpm\
	viewModified.xpm\
	viewRemove.xpm\
	viewUnknown.xpm\
	viewIgnored.xpm\
	about.xpm\
	flat.xpm\
	gcvs-32x32.xpm\
	hideUnknown.xpm\
	info.xpm\
	question.xpm\
	res_edit.xpm\
	stopAlert.xpm

EXTRA_DIST = $(gcvs_src_gcvs_pixmaps_DATA)
