EXTRA_DIST = \
	App.py \
	CmdUI.py \
	ColorConsole.py \
	Cvs.py \
	CvsEntry.py \
	CvsLog.py \
	Macro.py \
	MacroUtils.py \
	MacroRegistry.py \
	MenuMgr.py \
	Persistent.py \
	SafeTk.py \
	Shell.py \
	SubstModeTk.py \
	__init__.py

pkgdata_DATA = $(EXTRA_DIST)

pkgdatadir = $(prefix)/@NO_PREFIX_PACKAGE_DATA_DIR@/cvsgui
